--- a/css/styles.css
+++ b/css/styles.css
@@ -80,13 +80,18 @@ footer {
   margin-top: 15px;
   grid-area: footer; }
 
+.formulario {
+  margin-top: 5px; }
+
+.card__Tamaño {
+  width: 500px;
+  display: flex;
+  flex-direction: row; }
+
 @media only screen and (max-width: 768px) {
   .grid {
     display: grid;
-    grid-template-areas: "header"
- "nav"
- "main"
- "footer"; }
+    grid-template-areas: "header" "nav" "main" "footer"; }
   body {
     color: #FFFFFF;
     background-color: #000000;
@@ -96,10 +101,7 @@ footer {
 @media only screen and (max-width: 1024px) {
   .grid {
     display: grid;
-    grid-template-areas: "header header"
- "nav nav"
- "main main"
- "footer footer"; }
+    grid-template-areas: "header header" "nav nav" "main main" "footer footer"; }
   body {
     background-image: none;
     color: #6e8d17;
@@ -169,6 +171,10 @@ section div {
   font-style: italic;
   padding: 3px; }
 
+legend {
+  text-align: center;
+  margin-top: 10px; }
+
 .encabezado .encabezado__titulo {
   font-size: 70px;
   font-family: fantasy;
@@ -177,7 +183,7 @@ section div {
 
 .encabezado .encabezado__logo {
   width: 126px;
-  margin: -100px -20px; }
+  margin: -70px -20px; }
 
 .videoIndex .videoIndex__tamaño {
   margin-top: 10px; }
