--- a/scss/_estructura.scss
+++ b/scss/_estructura.scss
@@ -91,3 +91,12 @@ footer {
     grid-area: footer;
 }
 
+.formulario {
+    margin-top: 5px;
+}
+
+.card__Tamaño {
+    width: 500px;
+    display: flex;
+    flex-direction: row;
+}
